styles/app.css
:root {
  --very-dark-blue: hsl(243, 87%, 12%);
  --desaturated-blue: hsl(238, 22%, 44%);
  --bright-blue: hsl(224, 93%, 58%);
  --moderate-cyan: hsl(170, 45%, 43%);
  --light-grayish-blue: hsl(240, 75%, 98%);
  --light-gray: hsl(0, 0%, 75%);
  --dark-red: hsl(0, 81%, 41%);
  --main-font: 'Open Sans', sans-serif;
  --secondary-font: 'Raleway', sans-serif;
  --size-title: clamp(24px, 3vw, 28px);
  --size-text: clamp(16px, 3vw, 18px);
}
body { 
  font-family: var(--main-font);
  scroll-behavior: smooth;  
}
header, 
section {
  padding: clamp(1rem, 4vw, 3rem);
}
h1, 
h2,
a {
  font-family: var(--secondary-font);
  color: var(--very-dark-blue);
}
ul {
  list-style-type: none;
}
a {
  text-decoration: none;
  font-size: var(--size-text);
}
img {
  width: 100%;
}
/* logos - icons */
.logo {
  width: min(25vw, 135px);
}
.icon {
  width: 20px;
  margin-right: .5rem;
}
.info {
  margin: 4rem 0;
}
/* Typography */
.title {
  font-size: var(--size-title);
  font-weight: 700;
  line-height: 1.5;
}
.text {
  padding: 1rem 0 1rem;
  font-size: var(--size-text);
  line-height: 1.3;
}
/* Alignments */
.column-center {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
}
.flex-center {
  display: flex;
  justify-content: center;
  align-items: center;
}
.flex-between {
  display: flex;
  justify-content: space-between;
  align-items: center;
}
/* Form  */
.input {
  width: 75vw;
  padding: .8rem;
  border: 1px solid var(--very-dark-blue);
  border-radius: 4px;
}
.input::placeholder {
  color: var(--light-gray);
}
.input-error {
  border: 1px solid var(--dark-red);
}
.error-message {
  opacity: 0;
  margin-top: .3rem;
  font-size: 12px;
  text-align: left;
}
.btn {
  width: 80vw;
  height: 45px;
  padding: .8rem;
  margin-top: .3rem;
  font-family: var(--secondary-font);
  color: white;
  background-color: var(--bright-blue);
  border: none;
  border-radius: 4px;
  box-shadow: 2px 5px 8px rgba(0, 0, 0, 0.2);
}
.btn:hover,
.btn:focus {
  opacity: 0.6;
  cursor: pointer;
  transition: all 0.1s ease;
}
/********************************* 
- HEADER
*********************************/
.nav-menu {
  display: flex;
  gap: 1.5rem;
}
.nav-menu-link:hover,
.nav-menu-link:focus {
  color: var(--desaturated-blue);
}
/********************************* 
- FEATURES SECTION
*********************************/
.title-features {
  width: min(450px, 90vw);
}
.text-features {
  width: min(390px, 90vw);
}
/********************************* 
- TEAM SECTION
*********************************/
.team {
  background-color: var(--light-grayish-blue);
}
.curve {
  width: 100%;
  background-color: var(--light-grayish-blue);
}
.title-team {
  font-size: 1.2rem;
}
.text-team {
  width: min(570px, 90vw);
  color: var(--desaturated-blue);
  text-align: left;
  padding-left: 1.1rem;
}
.link-icon {
  padding-right: .5rem;
  margin: 2rem 0;
  position: relative;
}
.link-icon a {
  color: var(--moderate-cyan);
}
.link-icon:after {
  content: '';
  position: absolute;
  top: 25px;
  left: 0;
  width: 165px;
  height: 2px;
  background-color: var(--moderate-cyan);
}
.link-icon:hover {
  opacity: 0.7;
  transition: all 0.1s ease;
}
.card {
  width: min(360px, 80vw);
  padding: 1.2rem;
  text-align: left;
  color: var(--very-dark-blue);
  background-color: white;
  border-radius: 8px;
  box-shadow: -2px 6px 8px 7px rgba(0, 0, 0, 0.15);
}
.card-footer {
  display: flex;
  align-items: center;
}
.card-avatar {
  width: 40px;
  border-radius: 50%;
}
.card-details {
  display: flex;
  flex-direction: column;
  padding-left: .8rem;
}
.details-name {
  font-size: 14px;
  font-weight: 700;
  margin-bottom: .3rem;
}
.details-position {
  font-size: 12px;
}
/********************************* 
- SIGNUP SECTION
*********************************/
.signup {
  padding: clamp(3rem, 4vw, 4rem);
  background-color: var(--desaturated-blue);
  text-align: center;
}
.info-signup {
  margin-bottom: .8rem;
}
.title-signup {
  color: white;
}
.text-signup {
  width: min(470px, 80vw);
  color: var(--light-gray);
}
.input-signup {
  width: 68vw;
}
.btn-signup {
  width: 74vw;
}
/********************************* 
- FOOTER
*********************************/
.footer {
  padding: clamp(3rem, 5vw, 7rem);
  background-color: var(--very-dark-blue);
}
.logo-footer {
  width: 170px;
  margin-bottom: 2.5rem;
}
.contact div {
  margin-bottom: 2rem;
  color: white;
}
.footer-nav ul {
  margin-top: 3rem;
}
.footer-nav li {
  margin-bottom: 2rem;
}
.footer-nav a {
  color: white;
}
.footer-nav a:hover {
  color: var(--desaturated-blue);
}
.social-menu {
  gap: 1rem;
  padding: 1.5rem;
}
.social-icon {
  width: min(3vw, 15px);
  padding: .8rem;
  border: 1px solid white;
  border-radius: 50%;
  color:white;
}
.social-icon:hover,
.social-icon:focus {
  color: var(--desaturated-blue);
  border: 1px solid var(--desaturated-blue);
  transition: color .1s ease;
}
/********************************* 
- MEDIA QUERIES
*********************************/
@media screen and (min-width: 768px) {
  .features,
  .team {
    display: flex;
    flex-direction: row-reverse;
    justify-content: center;
  }
  .info {
    align-items: start;
    justify-content: center;
    text-align: left;
  }
  /********************************* 
  - FEATURES SECTION MQ
  *********************************/
  .form-features {
    display: flex;
    gap: .5rem;
  }
  .input {
    width: 20vw;
  }
  .btn-submit {
    width: 15vw;
    margin-top: 0;  
  }
  /********************************* 
  - TEAM SECTION MQ
  *********************************/
  .info-team {
    margin-right: 1.5rem;
  }
  .title-team {
    font-size: var(--size-title);
  }
  .link-icon {
    margin: .5rem 0 5rem;
  }
  /********************************* 
  - SIGNUP SECTION MQ
  *********************************/
  .signup {
    display: flex;
    justify-content: space-between;
    align-items: center; 
  }
  .form-signup {
    width: 40vw;
    text-align: left;
  }
  .info-signup {
    align-items: start;
    margin-top: 0;
    text-align: left;
  }
  .input-signup {
    width: 25vw;
  }
  .btn-signup {
    width: min(30vw, 160px);
  }
  /********************************* 
  - FOOTER MQ
  *********************************/
  .grid {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
  }
  .footer-nav {
    display: flex;
    justify-content: center;
    gap: 3rem;
    justify-self: flex-end;
  }
  .footer-nav ul {
    margin-top: 0;
  }
  .social {
    justify-self: flex-end;
  }
  .social-menu {
    padding: 0;
  }
}

